--- a/car-rental-frontend/src/app/components/brand/brand.component.html
+++ b/car-rental-frontend/src/app/components/brand/brand.component.html
@@ -34,7 +34,11 @@
       </tr>
     </thead>
 
-    <tr *ngFor="let brand of brands">
+    <tr
+      *ngFor="let brand of brands"
+      (click)="setCurrentBrand(brand)"
+      routerLink="cars/brand/{{ brand.id }}"
+    >
       <td>{{ brand.id }}</td>
       <td>{{ brand.name }}</td>
     </tr>
