--- a/car-rental-frontend/src/app/components/category/category.component.html
+++ b/car-rental-frontend/src/app/components/category/category.component.html
@@ -1,7 +1,17 @@
 <ul class="list-group">
-  <li class="list-group-item">Categories</li>
-  <li class="list-group-item">Cars</li>
-  <li class="list-group-item">Colors</li>
-  <li class="list-group-item">Brands</li>
-  <li class="list-group-item active">Rentals</li>
+  <li class="list-group-item">
+    <a routerLink="/cars" routerLinkActive="active">Cars</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="/rentals" routerLinkActive="active">Rentals</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="/colors" routerLinkActive="active">Colors</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="/brands" routerLinkActive="active">Brands</a>
+  </li>
+  <li class="list-group-item">
+    <a routerLink="/customers" routerLinkActive="active">Customers</a>
+  </li>
 </ul>
