--- a/car-rental-frontend/src/app/components/car/car.component.html
+++ b/car-rental-frontend/src/app/components/car/car.component.html
@@ -36,7 +36,11 @@
       </tr>
     </thead>
 
-    <tr *ngFor="let car of cars">
+    <tr
+      *ngFor="let car of cars"
+      (click)="setCurrentCar(car)"
+      routerLink="/cardetails/{{ car.carId }}"
+    >
       <td>{{ car.brandName }}</td>
       <td>{{ car.carColor }}</td>
       <td>{{ car.carDescription }}</td>
