--- a/car-rental-frontend/src/app/components/color/color.component.html
+++ b/car-rental-frontend/src/app/components/color/color.component.html
@@ -1,37 +1,17 @@
-<div *ngIf="isDataLoaded == false">
-  <div class="spinner-grow text-primary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-secondary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-success" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-danger" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-warning" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-info" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-light" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-dark" role="status">
+<div *ngIf="isDataLoaded == false" class="d-flex justify-content-center">
+  <div class="spinner-border text-primary" style="width: 10rem; height: 10rem"  role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
-<div class="mb-3">
-  <label class="form-label">Search Colors</label>
-  <input id="filterText" [(ngModel)]="filterText" type="text" class="form-control" placeholder="Search">
-</div>
-<div *ngIf="filterText" class="alert alert-success">
-  You've searched for {{ filterText }}.
-</div>
+
 <div *ngIf="isDataLoaded != false">
+  <div class="mb-3">
+    <label class="form-label">Search Colors</label>
+    <input id="filterText" [(ngModel)]="filterText" type="text" class="form-control" placeholder="Search">
+  </div>
+  <div *ngIf="filterText" class="alert alert-success">
+    You've searched for {{ filterText }}.
+  </div>
   <table class="table">
     <thead>
     <tr>
