--- a/car-rental-frontend/src/app/components/customer/customer.component.html
+++ b/car-rental-frontend/src/app/components/customer/customer.component.html
@@ -1,26 +1,5 @@
-<div *ngIf="isDataLoaded == false">
-  <div class="spinner-grow text-primary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-secondary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-success" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-danger" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-warning" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-info" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-light" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-dark" role="status">
+<div *ngIf="isDataLoaded == false" class="d-flex justify-content-center">
+  <div class="spinner-border text-primary" style="width: 10rem; height: 10rem"  role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
