--- a/car-rental-frontend/src/app/components/rental/rental.component.html
+++ b/car-rental-frontend/src/app/components/rental/rental.component.html
@@ -1,39 +1,18 @@
-<div *ngIf="isDataLoaded == false">
-  <div class="spinner-grow text-primary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-secondary" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-success" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-danger" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-warning" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-info" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-light" role="status">
-    <span class="visually-hidden">Loading...</span>
-  </div>
-  <div class="spinner-grow text-dark" role="status">
+<div *ngIf="isDataLoaded == false" class="d-flex justify-content-center">
+  <div class="spinner-border text-primary" style="width: 10rem; height: 10rem"  role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
 
 <div *ngIf="isDataLoaded != false">
-  <table class="table">
+  <table class="table table table-bordered">
     <thead>
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
         <th>Brand</th>
         <th>Description</th>
-        <th>DailyPrice</th>
+        <th>Daily Price</th>
         <th>Rent Date</th>
         <th>Return Date</th>
       </tr>
@@ -45,8 +24,8 @@
       <td>{{ rental.brandName }}</td>
       <td>{{ rental.carDescription }}</td>
       <td>{{ rental.carDailyPrice }}</td>
-      <td>{{ rental.rentDate }}</td>
-      <td>{{ rental.returnDate }}</td>
+      <td>{{ rental.rentDate | date:'medium'}}</td>
+      <td>{{ rental.returnDate | date:'medium'}}</td>
     </tr>
   </table>
 </div>
