--- a/car-rental-frontend/src/app/components/color/color.component.html
+++ b/car-rental-frontend/src/app/components/color/color.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="isDataLoaded == false" class="d-flex justify-content-center">
-  <div class="spinner-border text-primary" style="width: 10rem; height: 10rem"  role="status">
+  <div class="spinner-border text-primary" style="width: 10rem; height: 10rem" role="status">
     <span class="visually-hidden">Loading...</span>
   </div>
 </div>
@@ -17,12 +17,24 @@
     <tr>
       <th>Id</th>
       <th>Color</th>
+      <th></th>
     </tr>
     </thead>
-
+    <tbody>
     <tr *ngFor="let color of colors | filterColors:filterText" routerLink="/cars/color/{{ color.id }}">
       <td>{{ color.id }}</td>
       <td>{{ color.name }}</td>
+      <td>
+        <button type="button" class="btn btn-primary"
+                (click)="setCurrentColor(color)"
+                routerLink="/colors/update/{{color.id}}">Güncelle
+        </button>
+      </td>
     </tr>
+    </tbody>
+
   </table>
+  <div class="d-grid gap-2 col-6 mx-auto">
+    <button class="btn btn-primary" type="button" routerLink="/colors/add">Renk Ekle</button>
+  </div>
 </div>
