--- a/car-rental-frontend/src/app/components/car/car.component.html
+++ b/car-rental-frontend/src/app/components/car/car.component.html
@@ -35,18 +35,29 @@
       <th>Color</th>
       <th>Description</th>
       <th>Daily Price</th>
+      <th></th>
     </tr>
     </thead>
-
+    <tbody>
     <tr
       *ngFor="let car of cars | filterCars:filterText|filterCarBrands:currentBrand|filterCarColors:currentColor"
-      (click)="setCurrentCar(car)"
       routerLink="/cardetails/{{ car.carId }}"
     >
       <td>{{ car.brandName }}</td>
       <td>{{ car.carColor }}</td>
       <td>{{ car.carDescription }}</td>
       <td>{{ car.carDailyPrice }}</td>
+      <td>
+        <button type="button" class="btn btn-primary"
+                (click)="setCurrentCar(car)"
+                routerLink="/cars/update/{{car.carId}}">Güncelle
+        </button>
+      </td>
     </tr>
+    </tbody>
+
   </table>
+  <div class="d-grid gap-2 col-6 mx-auto">
+    <button class="btn btn-primary" type="button" routerLink="/cars/add">Araba Ekle</button>
+  </div>
 </div>
