--- a/car-rental-frontend/src/app/components/navi/navi.component.html
+++ b/car-rental-frontend/src/app/components/navi/navi.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Car Rental</a>
+    <a class="navbar-brand">Car Rental</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -13,31 +13,28 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-
-        <li class="nav-item">
-          <a
-            class="nav-link disabled"
-            href="#"
-            tabindex="-1"
-            aria-disabled="true"
-          ></a>
-        </li>
-      </ul>
-      <form class="d-flex">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+      <div class="navbar-nav me-auto mb-2 mb-lg-0">
+      </div>
+      <div class="d-flex" *ngIf="localStorageService.getUser()">
+        <div class="nav-item dropdown">
+          <button class="btn btn-outline-primary dropdown-toggle dropdown-toggle-split" id="navbarDropdown"
+                  role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+            {{localStorageService.getUser()}}
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" routerLink="/customer-detail">Profil Düzenle</a></li>
+            <li><a class="dropdown-item">Şifre Değiştir</a></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li><a class="dropdown-item" (click)="logOut()">Çıkış Yap</a></li>
+          </ul>
+        </div>
+      </div>
+      <form class="d-flex" *ngIf="!localStorageService.getUser()">
+        <button class="btn btn-outline-warning" routerLink="/register">Kayıt Ol</button>
+        <button class="btn btn-outline-success" routerLink="/login">Giriş</button>
       </form>
     </div>
   </div>
