Changed language of Frontend project to English, Added Photos of project in English and updated the Database Script

--- a/car-rental-frontend/src/app/components/brand/brand.component.html
+++ b/car-rental-frontend/src/app/components/brand/brand.component.html
@@ -29,14 +29,14 @@
       <td>
         <button type="button" class="btn btn-primary"
                 (click)="setCurrentBrand(brand)"
-                routerLink="/brands/update/{{brand.id}}">Güncelle
+                routerLink="/brands/update/{{brand.id}}">Update
         </button>
       </td>
     </tr>
     </tbody>
   </table>
   <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="button" routerLink="/brands/add">Marka Ekle</button>
+    <button class="btn btn-primary" type="button" routerLink="/brands/add">Add Brand</button>
   </div>
 </div>
 
