--- a/car-rental-frontend/src/app/components/car/car.component.html
+++ b/car-rental-frontend/src/app/components/car/car.component.html
@@ -50,7 +50,7 @@
       <td>
         <button type="button" class="btn btn-primary"
                 (click)="setCurrentCar(car)"
-                routerLink="/cars/update/{{car.carId}}">Güncelle
+                routerLink="/cars/update/{{car.carId}}">Update
         </button>
       </td>
     </tr>
@@ -58,6 +58,6 @@
 
   </table>
   <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="button" routerLink="/cars/add">Araba Ekle</button>
+    <button class="btn btn-primary" type="button" routerLink="/cars/add">Add Car</button>
   </div>
 </div>
