--- a/car-rental-frontend/src/app/components/color/color.component.html
+++ b/car-rental-frontend/src/app/components/color/color.component.html
@@ -27,7 +27,7 @@
       <td>
         <button type="button" class="btn btn-primary"
                 (click)="setCurrentColor(color)"
-                routerLink="/colors/update/{{color.id}}">Güncelle
+                routerLink="/colors/update/{{color.id}}">Update
         </button>
       </td>
     </tr>
@@ -35,6 +35,6 @@
 
   </table>
   <div class="d-grid gap-2 col-6 mx-auto">
-    <button class="btn btn-primary" type="button" routerLink="/colors/add">Renk Ekle</button>
+    <button class="btn btn-primary" type="button" routerLink="/colors/add">Add Color</button>
   </div>
 </div>
