--- a/car-rental-frontend/src/app/components/login/login.component.html
+++ b/car-rental-frontend/src/app/components/login/login.component.html
@@ -2,25 +2,25 @@
 
 <main class="form-signin">
   <form [formGroup]="loginForm">
-    <h1 class="h3 mb-3 fw-normal">Lütfen giriş yapınız.</h1>
+    <h1 class="h3 mb-3 fw-normal">Please login.</h1>
 
     <div class="form-floating">
       <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email">
       <label for="email">Email</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Parola"
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
              formControlName="password">
-      <label for="floatingPassword">Parola</label>
+      <label for="floatingPassword">Password</label>
     </div>
 
     <div class="checkbox mb-3">
       <label>
-        <input type="checkbox" value="remember-me"> Beni Hatırla
+        <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" (click)="login()">Giriş Yap</button>
-    <p class="mt-5 mb-3 text-muted" routerLink="/register">Hala kayıt olmadın mı?</p>
+    <button class="w-100 btn btn-lg btn-primary" (click)="login()">Login</button>
+    <p class="mt-5 mb-3 text-muted" routerLink="/register">Haven't you registered yet?</p>
   </form>
 </main>
 
