--- a/car-rental-frontend/src/app/components/brand-add/brand-add.component.html
+++ b/car-rental-frontend/src/app/components/brand-add/brand-add.component.html
@@ -2,19 +2,19 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h5 class="card-title"> Marka Ekle</h5>
+        <h5 class="card-title"> Add Brand</h5>
       </div>
       <div class="card-body">
         <form [formGroup]="brandAddForm">
           <div class="mb-3">
-            <label for="brandName">Marka Adı</label>
+            <label for="brandName">Brand name</label>
             <input type="text" id="brandName" formControlName="name"
-                   class="form-control" placeholder="Marka adı">
+                   class="form-control" placeholder="Brand name">
           </div>
         </form>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary" (click)="add()">Ekle</button>
+        <button class="btn btn-primary" (click)="add()">Add</button>
       </div>
     </div>
   </div>
