--- a/car-rental-frontend/src/app/components/brand-update/brand-update.component.html
+++ b/car-rental-frontend/src/app/components/brand-update/brand-update.component.html
@@ -2,19 +2,19 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h5 class="card-title"> Markayı Güncelle</h5>
+        <h5 class="card-title"> Update Brand</h5>
       </div>
       <div class="card-body">
         <form [formGroup]="brandUpdateForm">
           <div class="mb-3">
-            <label for="brandName">Marka Adı</label>
+            <label for="brandName">Brand name</label>
             <input type="text" id="brandName" formControlName="name"
                    class="form-control" placeholder="{{currentBrand.name}}">
           </div>
         </form>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary" (click)="update()">Güncelle</button>
+        <button class="btn btn-primary" (click)="update()">Update</button>
       </div>
     </div>
   </div>
