--- a/car-rental-frontend/src/app/components/car-add/car-add.component.html
+++ b/car-rental-frontend/src/app/components/car-add/car-add.component.html
@@ -2,40 +2,40 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h5 class="card-title"> Araba Ekle</h5>
+        <h5 class="card-title"> Add Car</h5>
       </div>
       <div class="card-body">
         <form [formGroup]="carAddForm">
           <div class="mb-3">
-            <label for="colorId">Renk Id</label>
+            <label for="colorId">Color Id</label>
             <input type="number" id="colorId" formControlName="colorId"
-                   class="form-control" placeholder="Renk Id">
+                   class="form-control" placeholder="Color Id">
           </div>
           <div class="mb-3">
-            <label for="brandId">Marka Id</label>
+            <label for="brandId">Brand Id</label>
             <input type="number" id="brandId" formControlName="brandId"
-                   class="form-control" placeholder="Marka Id">
+                   class="form-control" placeholder="Brand Id">
           </div>
           <div class="mb-3">
-            <label for="modelYear">Model Yılı</label>
+            <label for="modelYear">Model year</label>
             <input type="number" id="modelYear" formControlName="modelYear"
-                   class="form-control" placeholder="Model yılı">
+                   class="form-control" placeholder="Model year">
           </div>
           <div class="mb-3">
-            <label for="dailyPrice">Günlük Kirası</label>
+            <label for="dailyPrice">Daily Rental</label>
             <input type="number" id="dailyPrice" formControlName="dailyPrice"
-                   class="form-control" placeholder="Günlük kira">
+                   class="form-control" placeholder="Daily Rental">
           </div>
           <div class="mb-3">
-            <label for="description">Araba Açıklaması</label>
+            <label for="description">Car Description</label>
             <input type="text" id="description" formControlName="description"
-                   class="form-control" placeholder="Açıklama ...">
+                   class="form-control" placeholder="Car Description">
           </div>
         </form>
       </div>
       <div class="card-footer">
         <div class="d-grid gap-2 col-6 mx-auto">
-          <button class="btn btn-primary" (click)="add()">Ekle</button>
+          <button class="btn btn-primary" (click)="add()">Add</button>
         </div>
       </div>
     </div>
