--- a/car-rental-frontend/src/app/components/color-add/color-add.component.html
+++ b/car-rental-frontend/src/app/components/color-add/color-add.component.html
@@ -2,19 +2,19 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h5 class="card-title"> Renk Ekle</h5>
+        <h5 class="card-title"> Add Color</h5>
       </div>
       <div class="card-body">
         <form [formGroup]="colorAddForm">
           <div class="mb-3">
-            <label for="colorName">Renk Adı</label>
+            <label for="colorName">Color Name</label>
             <input type="text" id="colorName" formControlName="name"
-                   class="form-control" placeholder="Renk adı">
+                   class="form-control" placeholder="Color Name">
           </div>
         </form>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary" (click)="add()">Ekle</button>
+        <button class="btn btn-primary" (click)="add()">Add</button>
       </div>
     </div>
   </div>
