--- a/car-rental-frontend/src/app/components/color-update/color-update.component.html
+++ b/car-rental-frontend/src/app/components/color-update/color-update.component.html
@@ -2,19 +2,19 @@
   <div class="col-md-12">
     <div class="card">
       <div class="card-header">
-        <h5 class="card-title"> Renk Güncelle</h5>
+        <h5 class="card-title"> Update Color</h5>
       </div>
       <div class="card-body">
         <form [formGroup]="colorUpdateForm">
           <div class="mb-3">
-            <label for="colorName">Renk Adı</label>
+            <label for="colorName">Color Name</label>
             <input type="text" id="colorName" formControlName="name"
                    class="form-control" placeholder="{{currentColor.name}}">
           </div>
         </form>
       </div>
       <div class="card-footer">
-        <button class="btn btn-primary" (click)="update()">Güncelle</button>
+        <button class="btn btn-primary" (click)="update()">Update</button>
       </div>
     </div>
   </div>
