--- a/car-rental-frontend/src/app/components/register/register.component.html
+++ b/car-rental-frontend/src/app/components/register/register.component.html
@@ -2,25 +2,25 @@
 
 <main class="form-signup">
   <form [formGroup]="registerForm">
-    <h1 class="h3 mb-3 fw-normal">Lütfen kayıt olunuz.</h1>
+    <h1 class="h3 mb-3 fw-normal">Please register.</h1>
     <div class="form-floating">
-      <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="Ad">
-      <label for="firstName">Ad</label>
+      <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="First Name">
+      <label for="firstName">First Name</label>
     </div>
     <div class="form-floating">
-      <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Soyad">
-      <label for="lastName">Soyad</label>
+      <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="Last Name">
+      <label for="lastName">Last Name</label>
     </div>
     <div class="form-floating">
       <input type="email" class="form-control" id="email" formControlName="email" placeholder="Email">
       <label for="email">Email</label>
     </div>
     <div class="form-floating">
-      <input type="password" class="form-control" id="floatingPassword" placeholder="Parola"
+      <input type="password" class="form-control" id="floatingPassword" placeholder="Password"
              formControlName="password">
-      <label for="floatingPassword">Parola</label>
+      <label for="floatingPassword">Password</label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" (click)="register()">Kayıt Ol</button>
+    <button class="w-100 btn btn-lg btn-primary" (click)="register()">Register</button>
     <p class="mt-5 mb-3 text-muted">&copy; poyrazaktas</p>
   </form>
 </main>
